Add the title as Full Stack Software Engineer, Link Contact to the form and update the resume

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="main-container">
             <div class="greeting_wrapper">
                 <h1>Hi, I'm Ilka Santiago</h1>
+                <h3>Full Stack Software Engineer</h3>
             </div>
             <div class="intro-wrapper">
                 <div class="nav-wrapper">
@@ -26,7 +27,7 @@
                         <div id="dot-3" class="browser-dot"></div>
                     </div>
                     <ul id="navigation">
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="left-column">
@@ -37,7 +38,7 @@
                         <div id="preview">
                             <div id="corner-tl" class="corner"></div>
                             <div id="corner-tr" class="corner"></div>
-                            <h3>What I Do</h3>
+                            <h3>Background</h3>
                             <p>I worked in aerospace industry as system integrator and system verification for more than 10 years and recently I've been developing programming skills.</p>
                             <div id="corner-br" class="corner"></div>
                             <div id="corner-bl" class="corner"></div>
@@ -54,13 +55,13 @@
 				<div class="about-me">
 					<h4>More about me</h4>
 
-					<p>As a passion for learning, I'm engaging in new projects which is strengthening my current abilities.</p>
+					<p>Passion for learning, I'm engaging in new projects which is strengthening my current abilities.</p>
                     <br>
 					<hr>
 
 					<h4>Abilities</h4>
 
-					<p>Fullstack developer with primary focus on JavaScript, Node & React: <a target="_blank" href="Design_Resume_Mar-31.pdf">Download Resume</a></p>
+					<p>Fullstack developer with primary focus on JavaScript, Node & React: <a target="_blank" href="Design_Resume_Apr-5.pdf">Download Resume</a></p>
 
 					<div id="skills">
 						<ul>
@@ -86,7 +87,7 @@
 					<h4 style="text-align: left;">Some of my past projects</h4>
 
 					<p>Mancala | <a target="_blank" href="https://isantiag.github.io/Mancala">https://isantiag.github.io/Mancala</a></p>
-					<!-- <br> -->
+				
 					<p>Stock Market | <a target="_blank" href="https://ilka-stock-price.herokuapp.com">https://ilka-stock-price.herokuapp.com</a></p>
 				</div>
 			</div>
@@ -98,11 +99,11 @@
 
     <section class="s1">
         <div class="main-container">
-            <a href=""></a>
+        
 			<h3 style="text-align: center;">Get In Touch</h3>
 
 			<form action="POST" id="contact-form" data-netlify="true">
-				<a name="contact"></a>
+				<a id="contact"></a>
 
 				<label>Name</label>
 				<input class="input-field" type="text" name="name">
